# deepstream_reference_apps

./: .gitattributes  .gitignore  LICENSE  Makefile.config  README.md
CaffeMNIST/: README.md  config_infer_primary_CaffeMNIST.txt  deepstream_app_config_CaffeMNIST.txt
CaffeMNIST/config/: config_infer_primary_CaffeMNIST.txt
CaffeMNIST/nvdsinfer_custom_impl_CaffeMNIST/: CMakeLists.txt
anomaly/: README.md
anomaly/apps/deepstream-anomaly-detection/: CMakeLists.txt  deepstream-anomaly-app.c
anomaly/config/: ds_pgie_config.txt
anomaly/plugins/gst-dsopticalflow/: CMakeLists.txt  gstdsopticalflow.cpp  gstdsopticalflow.h  nvdsoptflow.h
anomaly/plugins/gst-dsopticalflow/dsopticalflow_lib/: CMakeLists.txt  dsinternalmemory.cpp  dsinternalmemory.h  dsopticalflow_lib.cpp  dsopticalflow_lib.h
back-to-back-detectors/: Makefile  README.md  back_to_back_detectors.c  primary_detector_config.txt  secondary_detector_config.txt
back-to-back-detectors/inferserver/: primary_detector_config.txt  secondary_detector_config.txt
config/: deepstream-app_yolo_config.txt  nvgstiva-app_yolo_config.txt  yolov2-tiny.txt  yolov2.txt  yolov3-tiny.txt  yolov3.txt
data/: test_images.txt
data/mnist/: mnist3d.prototxt
data/yolo/: yolov2-calibration.table  yolov2-tiny-calibration.table
deepstream-3d-sensor-fusion/: README.md
deepstream-3d-sensor-fusion/data/: .gitattributes
deepstream-bodypose-3d/: LICENSE  README.md  download_models.sh
deepstream-bodypose-3d/configs/: config_infer_primary_peoplenet.txt  config_infer_secondary_bodypose3dnet.txt
deepstream-bodypose-3d/sources/: Makefile  deepstream_pose_estimation_app.cpp
deepstream-custom-tile-config/: Makefile  README.md  custom_tiler_cfg.c  nvdstilerconfig.h
deepstream-dynamicsrcbin-test/: Makefile  README  deepstream_dynamicsrcbin_test.c
deepstream-ipc-test-sr/: Makefile  README.md  config_videotemplate.yml  deepstream_ipc_test_app.c  dsipctest_pgie_config.yml  dsipctest_sgie_config.yml
deepstream-ipc-test-sr/latency_serialization/: Makefile  latency_serialization.c
deepstream-ipc-test-sr/video_template_impl/: Makefile  data_conversion.cu  data_conversion.h  vt_impl.cpp  yaml_parser.cpp  yaml_parser.h
deepstream-masktracker/: README.md
deepstream-masktracker/configs/: config_infer_primary.txt  deepstream_app_source1.txt
deepstream-retail-analytics/: LICENSE.md  Makefile  README.md  nvdsmeta_schema.h  retail_iva.c
deepstream-retail-analytics/configs/: README.md  basket_classifier.txt  basket_classifier.yml  dstest4_config.yml  dstest4_msgconv_config.yml  dstest4_msgconv_config_1.txt  dstest4_msgconv_config_1.yml  dstest4_tracker_config.txt  pgie_config_peoplenet.yml  retail_iva.yml
deepstream-retail-analytics/confluent-platform/: stream_creation.sql
deepstream-retail-analytics/ds-retail-iva-frontend/: README.md  config.py  environment.yml  random_message_generator.py  requirements.txt
deepstream-retail-analytics/files/: README.md  basketClassifier.etlt  basket_classifier_labels.txt  checksum.txt
deepstream-retail-analytics/nvmsgconv/: Makefile  README.md  nvmsgconv.cpp  nvmsgconv.h
deepstream-tracker-3d/: README.md
deepstream-tracker-3d-multi-view/: README.md  requirements.txt
deepstream-tracker-3d-multi-view/assets/: LICENSE
deepstream-tracker-3d-multi-view/config_templates/: config_deepstream.txt  config_mqtt.txt  config_msgconv.txt  config_pgie.txt  config_pgie_peoplenet.txt  config_pgie_rt_detr.txt  config_tracker.yml  config_tracker_2d.yml  config_tracker_tuned_12cam.yml  config_tracker_tuned_12cam_rt_detr.yml  ds_mv3dt.yaml  override_tracker_12cam.yml  override_tracker_4cam.yml
deepstream-tracker-3d-multi-view/docs/: manual-setup.md  step-by-step-deepstream.md  step-by-step-inference-builder.md
deepstream-tracker-3d-multi-view/scripts/: check_prerequisites.sh  create_6cam_subset.sh  (+8 more)
deepstream-vllm-plugin/: README.md  config.yaml  config_loader.py  docker-compose-kafka.yml  gstnvvllmvlm.py  install.sh  requirements.txt  test_consumer.py  vllm_ds_app_kafka_publish.py
deepstream_app_tao_configs/: README.md  config_infer_primary_dashcamnet.txt  config_infer_primary_dashcamnet.yml  config_infer_primary_detectnet_v2.txt  config_infer_primary_detectnet_v2.yml  config_infer_primary_dssd.txt  config_infer_primary_dssd.yml  config_infer_primary_efficientdet.txt  config_infer_primary_efficientdet.yml  config_infer_primary_facedetectir.txt  config_infer_primary_facedetectir.yml  config_infer_primary_frcnn.txt  config_infer_primary_frcnn.yml  config_infer_primary_frcnn_dgpu.txt  config_infer_primary_frcnn_dgpu.yml  config_infer_primary_frcnn_jetson.txt  config_infer_primary_frcnn_jetson.yml  config_infer_primary_mrcnn.txt  config_infer_primary_multi_task.txt  config_infer_primary_multi_task.yml  config_infer_primary_peopleSegNet.txt  config_infer_primary_peopleSegNet.yml  config_infer_primary_peopleSemSegNet.txt  config_infer_primary_peoplenet.txt  config_infer_primary_peoplenet.yml  config_infer_primary_retinanet.txt  config_infer_primary_retinanet.yml  config_infer_primary_ssd.txt  config_infer_primary_ssd.yml  config_infer_primary_trafficcamnet.txt  config_infer_primary_trafficcamnet.yml  config_infer_primary_yolov3.txt  config_infer_primary_yolov3.yml  config_infer_primary_yolov3_dgpu.txt  config_infer_primary_yolov3_dgpu.yml  config_infer_primary_yolov3_jetson.txt  config_infer_primary_yolov3_jetson.yml  config_infer_primary_yolov4-tiny.txt  config_infer_primary_yolov4-tiny.yml  config_infer_primary_yolov4-tiny_dgpu.txt  (+45 more)
deepstream_parallel_inference_app/: README.md
runtime_source_add_delete/: Makefile  README.md  deepstream_test_rt_src_add_del.c  dstest_pgie_config.txt  dstest_sgie1_config.txt  dstest_sgie2_config.txt  dstest_sgie3_config.txt  dstest_tracker_config.txt  tracker_config.yml
senet/: LICENSE  README.md
senet/apps/deepstream-senet/: CMakeLists.txt  README.md  deepstream-senet-app.cpp
senet/apps/trt-senet/: CMakeLists.txt  Makefile  README.md  trt-senet-app.cpp  trt-senet.cpp
yolo/: README.md  prebuild.sh
yolo/plugins/gst-yoloplugin-tegra/: CMakeLists.txt  gstyoloplugin.cpp
(+383 files in other folders)
